# ISR

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
cli/resampling/: batch_resample.py  resample_single_episode.py
cli/visualization/: visualize_traj.py
data/: example_1.json
src/isr/: __init__.py  gripper.py  io.py  kinematics.py  resample_trajectory.py
src/isr/cli/: __init__.py  batch.py  resample.py  visualize.py
tests/: test_gripper.py  test_io.py  test_kinematics.py  test_resample.py
