[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isr"
version = "0.1.0"
description = "Information-Standardized Trajectory Resampling for robotic imitation learning."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
