[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isr"
version = "0.1.0"
description = "Information-Standardized Trajectory Resampling for robotic imitation learning."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24,<3",
    "matplotlib>=3.6",
]

[project.scripts]
isr-resample   = "isr.cli.resample:main"
isr-batch      = "isr.cli.batch:main"
isr-visualize  = "isr.cli.visualize:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
